5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1575_579.log
== TEST (2019-03-12 21:46:34) 
-- CODE:
print("A UFAM tem", 2016-1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:47:01) 
-- CODE:
print("A UFAM tem", 2016-1909, "anos de fundacao")
-- EXECUTION TIME:
0.190729
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:47:11) 
-- CODE:
print("A UFAM tem" 2016-1909, "anos de fundacao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem" 2016-1909, "anos de fundacao")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:48:03) 
-- CODE:
print("A UFAM tem 2016-1909 anos de fundacao")
-- OUTPUT:
A UFAM tem 2016-1909 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:48:27) 
-- CODE:
print("A UFAM tem" 2016-1909 "anos de fundacao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem" 2016-1909 "anos de fundacao")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:48:39) 
-- CODE:
print("A UFAM tem" 2016 - 1909 "anos de fundacao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem" 2016 - 1909 "anos de fundacao")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:48:57) 
-- CODE:
print("A UFAM tem" ,2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:49:12) 
-- CODE:
print("A UFAM tem" ,2016-1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:49:15) 
-- CODE:
print("A UFAM tem" ,2016-1909, "anos de fundacao.")
-- EXECUTION TIME:
0.214654
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
